@@ -30,6 +30,8 @@ Version 1.6.0
     Sebastian Kuzminsky for reporting the problem.
   + Add CPUModel detection on Darwin and x86/FreeBSD.
     Thanks to Robin Scher for providing ways to implement this.
+  + The x86 backend now adds CPUModel info attributes to socket objects
+    created by other backends that do not natively support this attribute.
 * XML
   + Add hwloc_topology_set_userdata_import/export_callback(),
     hwloc_export_obj_userdata() and _userdata_base64() to let
